--- a/Lessons/M10_AdvancedForecastingModels.Rmd
+++ b/Lessons/M10_AdvancedForecastingModels.Rmd
@@ -341,6 +341,7 @@ NN_fit <- nnetar(ts_act_power_daily_train,p=1,P=0,xreg=fourier(ts_act_power_dail
 #NN_for <- forecast(NN_fit, h=365) 
 NN_for <- forecast(NN_fit, h=365,xreg=fourier(ts_act_power_daily_train, 
                                           K=c(2,12),h=365))
+#changing k = c(2,4), c(2.6) you can see how different model perform
 
 #Plot foresting results
 autoplot(NN_for) +
