--- a/Project/Project_Instructions.Rmd
+++ b/Project/Project_Instructions.Rmd
@@ -45,6 +45,9 @@ geometry: margin=2.54cm
 
 ### Contents of the Report 
 
+
+#Importing time series data from text file#
+
 #### Introduction, Motivation, Relevance, Objectives
 
 Write a few paragraphs detailing the rationale for your study. This should include both the context of the topic as well as a rationale for your choice of dataset (reason for location, variables, etc.). You may choose to include citations if you like or any other reference you may have used during the project (optional).
